parser/src/test/resources/corpus/valid/48_module_decl.ff
module fundflow.examples.basic

rule "After Module" {
  description: "rules can follow a module declaration"
}
