parser/src/test/resources/corpus/invalid/58_module_after_rule.ff
rule "Already Defined" {
  description: "module must come first"
}

module fundflow.examples.basic
